[package]
name = "okkomm-rs"
edition = "2021"
version = "0.1.0"
description = """
OK.Komm client for Rust
"""
rust-version = "1.78.0"
authors = ["H & D GmbH Open Source <contact-oss@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/okkomm-rs"
categories = []
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bytes = "1.3.0"
chrono = "0.4"
chrono-tz = "0.8.1"
quick-xml = { version = "0.27.1", features = ["serialize"] }
reqwest = { version = "0.11.14", features = ["default-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.20", features = [] }
